# non-zero-size

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
.github/workflows/: release.yml
changes/: ~rust-version.change.md
src/: lib.rs
